<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/this_device">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_tethering"
            android:summary="@string/enable_remote_tethering_summary"
            android:title="@string/enable_remote_tethering" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="disable_wifi"
            android:summary="@string/disable_wifi_summary"
            android:title="@string/disable_wifi" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/remote_device"
        >
    <ListPreference
        android:key="remote_device"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/remote_device_name" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="disable_on_screen_off"
        android:summary="@string/disable_on_screen_off_summary"
        android:title="@string/disable_on_screen_off" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_on_screen_on"
        android:summary="@string/disable_on_screen_on_summary"
        android:title="@string/enable_on_screen_on" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="show_switch_notification"
        android:summary="@string/show_ongoing_notification_summary"
        android:title="@string/show_ongoing_notification" />

    <Preference
        android:key="pair_bluetooth"
        android:widgetLayout="@layout/pair_bluetooth" />
    <Preference
        android:key="connect_wifi"
        android:widgetLayout="@layout/connect_wifi" />
    </PreferenceCategory>
</PreferenceScreen>
